--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "arrow-keys-react": "^1.0.6",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "chart.js": "^3.3.2",
     "leaflet": "^1.7.1",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^16.8.6",
     "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^3.0.3",
     "react-datepicker": "^4.1.1",
     "react-dom": "^16.8.6",
     "react-google-charts": "^3.0.15",
