--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.5",
     "arrow-keys-react": "^1.0.6",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
